<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.view.MovieDetailFragment">

        <ProgressBar
            android:id="@+id/detailLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detailImageView"
            android:layout_width="@dimen/big_image_size"
            android:layout_height="@dimen/extra_big_image_size"
            android:layout_marginStart="@dimen/medium_spacing_size"
            android:layout_marginEnd="@dimen/medium_spacing_size"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.20"
            tools:src="@drawable/sample_poster" />

        <TextView
            android:id="@+id/detailNameText"
            style="@style/movieTextMedium"
            android:layout_marginTop="@dimen/large_spacing_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailImageView"
            tools:text="@string/default_movie_name" />

        <TextView
            android:id="@+id/detailYearText"
            style="@style/movieTextSmall"
            android:layout_marginTop="@dimen/small_spacing_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailNameText"
            tools:text="@string/default_movie_year" />

        <TextView
            android:id="@+id/detailDirectorText"
            style="@style/movieTextSmall"
            android:layout_marginTop="@dimen/small_spacing_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailYearText"
            tools:text="@string/default_movie_director" />

        <TextView
            android:id="@+id/detailActorsText"
            style="@style/movieTextSmall"
            android:layout_marginStart="@dimen/large_spacing_size"
            android:layout_marginTop="@dimen/small_spacing_size"
            android:layout_marginEnd="@dimen/large_spacing_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailDirectorText"
            tools:text="@string/default_movie_lead_role" />

        <TextView
            android:id="@+id/detailCountryText"
            style="@style/movieTextSmall"
            android:layout_marginTop="@dimen/small_spacing_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailActorsText"
            tools:text="@string/default_movie_country" />

        <TextView
            android:id="@+id/detailImdbText"
            style="@style/movieTextLarge"
            android:layout_marginTop="@dimen/small_spacing_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailCountryText"
            tools:text="@string/default_movie_imdb" />

</androidx.constraintlayout.widget.ConstraintLayout>